[gd_scene load_steps=29 format=2]

[ext_resource path="res://Assets/GUI Assets/Menu/Pause-Menu-Overlay.png" type="Texture" id=1]
[ext_resource path="res://Assets/GUI Assets/Menu/Pause-Menu-Thorns-animate.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Pause Menu Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/GUI Assets/Menu/Menu btn/IDLE/Pause-Menu-Btn-idle_02.png" type="Texture" id=4]
[ext_resource path="res://Assets/GUI Assets/Menu/Menu btn/HOVER/Pause-Menu-Btn-hover_02.png" type="Texture" id=5]
[ext_resource path="res://Assets/GUI Assets/Menu/Menu btn/IDLE/Pause-Menu-Btn-idle_03.png" type="Texture" id=6]
[ext_resource path="res://Assets/GUI Assets/Menu/Menu btn/HOVER/Pause-Menu-Btn-hover_03.png" type="Texture" id=7]
[ext_resource path="res://Assets/GUI Assets/Menu/Menu btn/IDLE/Pause-Menu-Btn-idle_04.png" type="Texture" id=8]
[ext_resource path="res://Assets/GUI Assets/Menu/Menu btn/HOVER/Pause-Menu-Btn-hover_04.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Pause Menu.gd" type="Script" id=10]
[ext_resource path="res://Assets/GUI Assets/Menu/Pause-Menu-Overlay-Continue-icon.png" type="Texture" id=11]
[ext_resource path="res://Assets/GUI Assets/Menu/Pause-Menu-Overlay-Options-icon.png" type="Texture" id=12]
[ext_resource path="res://Assets/GUI Assets/Menu/Pause-Menu-Overlay-Quit-icon.png" type="Texture" id=13]
[ext_resource path="res://Assets/GUI Assets/Menu/Pause-Menu-Overlay-Credits-icon.png" type="Texture" id=14]
[ext_resource path="res://Assets/GUI Assets/Fonts/Titles-names-etc/Silent Moon Regular.otf" type="DynamicFontData" id=15]
[ext_resource path="res://Assets/GUI Assets/Menu/Pause-Menu-Overlay-Txt-Desc.png" type="Texture" id=16]
[ext_resource path="res://Assets/GUI Assets/Menu/Pause-Menu-Overlay-OtherScreen.png" type="Texture" id=17]

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

void fragment() {
    vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, SCREEN_UV.x * 3.0);
    COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 360.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Spin"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Hover",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Hover",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Hover",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Continue",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "Credits",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Options",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "Quit",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=7]
size = 80
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=8]
size = 80
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=11]
size = 50
font_data = ExtResource( 15 )

[node name="Pause Menu" type="Control"]
script = ExtResource( 10 )

[node name="Blurr" type="Sprite" parent="."]
material = SubResource( 10 )
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="Vines" type="Sprite" parent="."]
position = Vector2( 2118, 579 )
rotation = 6.28319
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Vines"]
anims/RESET = SubResource( 1 )
anims/Spin = SubResource( 2 )

[node name="Continue" parent="." instance=ExtResource( 3 )]
position = Vector2( 1607, 353 )
__meta__ = {
"_edit_group_": true
}

[node name="Options" parent="." instance=ExtResource( 3 )]
position = Vector2( 1668, 529 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" parent="Options" index="0"]
frames = SubResource( 3 )

[node name="Button" parent="Options" index="1"]
margin_left = -128.0
margin_top = -59.0
margin_right = 81.0
margin_bottom = 30.0

[node name="Credits" parent="." instance=ExtResource( 3 )]
position = Vector2( 1663, 684 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" parent="Credits" index="0"]
frames = SubResource( 4 )

[node name="Button" parent="Credits" index="1"]
margin_left = -115.0
margin_top = -48.0
margin_right = 94.0
margin_bottom = 50.0

[node name="Quit" parent="." instance=ExtResource( 3 )]
position = Vector2( 1666, 859 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" parent="Quit" index="0"]
frames = SubResource( 5 )

[node name="Button" parent="Quit" index="1"]
margin_left = -24.0
margin_top = -64.0
margin_right = 96.0
margin_bottom = 34.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 667, 482 )
frames = SubResource( 6 )
animation = "Options"

[node name="Label" type="Label" parent="."]
margin_left = 455.5
margin_top = 793.0
margin_right = 877.5
margin_bottom = 896.0
custom_fonts/font = SubResource( 7 )
text = "Resume Gameplay"
align = 1

[node name="Sprite" type="Sprite" parent="."]

[node name="Pause-Menu-Overlay-Txt-Desc" type="Sprite" parent="Sprite"]
position = Vector2( 672, 967 )
texture = ExtResource( 16 )

[node name="Credit Background" type="Sprite" parent="."]
position = Vector2( 681, 552 )
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="Credit Background"]
margin_left = -553.0
margin_top = -361.0
margin_right = 545.0
margin_bottom = 378.0
custom_fonts/font = SubResource( 8 )
text = "Credits:
Programming: Tobaz
Character & Background Art: Mattaya(Kira)
GUI Art: Sterkiherz
Music: Emanon PC
Sound Effects: Daniil_Voynov
Animations: Honey Rooibos"
align = 1

[node name="Options Background" type="Sprite" parent="."]
position = Vector2( 681, 552 )
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="Options Background"]
margin_left = -553.0
margin_top = -388.0
margin_right = 545.0
margin_bottom = -285.0
custom_fonts/font = SubResource( 8 )
text = "Options:"
align = 1

[node name="Fullscreen" type="Label" parent="Options Background"]
margin_left = -549.0
margin_top = -205.0
margin_right = -389.0
margin_bottom = -140.0
custom_fonts/font = SubResource( 11 )
text = "Fullscreen:"

[node name="Vsync" type="Label" parent="Options Background"]
margin_left = -549.0
margin_top = -95.0
margin_right = -389.0
margin_bottom = -30.0
custom_fonts/font = SubResource( 11 )
text = "Vsync:"

[node name="Music volume" type="Label" parent="Options Background"]
margin_left = -550.0
margin_top = 23.0
margin_right = -339.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 11 )
text = "Music volume:"

[node name="Vsync2" type="Label" parent="Options Background"]
margin_left = -550.0
margin_top = 133.0
margin_right = -366.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 11 )
text = "SFX volume:"

[connection signal="pressed" from="Continue/Button" to="." method="_on_Continue_Button_pressed"]
[connection signal="pressed" from="Options/Button" to="." method="_on_Options_Button_pressed"]
[connection signal="pressed" from="Credits/Button" to="." method="_on_Credits_Button_pressed"]
[connection signal="pressed" from="Quit/Button" to="." method="_on_Quit_Button_pressed"]

[editable path="Continue"]
[editable path="Options"]
[editable path="Credits"]
[editable path="Quit"]
